--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   </main>
 
   <script>
-    const APP_ID = "YOUR_APP_ID"; // Replace with your Nutritionix App ID
-    const APP_KEY = "YOUR_APP_KEY"; // Replace with your Nutritionix App Key
-
+    const APP_ID = "YOUR_APP_ID"; // 8ebf3b28
+    const APP_KEY = "YOUR_APP_KEY"; // 0c50e9b7dc675df49229d2a50a92390d
     const form = document.getElementById("upload-form");
     const table = document.getElementById("table");
 
