--- a/index.html
+++ b/index.html
@@ -3,31 +3,52 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Smart Grocery Dashboard — Phase 1</title>
+  <title>Smart Grocery Dashboard — Phase 3</title>
+
+  <!-- Styling -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+  <style>
+    canvas { max-width: 700px; margin: 2rem auto; display: block; }
+    footer { margin-top: 2rem; font-weight: bold; }
+  </style>
+
+  <!-- Libraries -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
+
 <body>
   <main class="container">
-    <h1>🥦 Smart Grocery Dashboard (Phase 1)</h1>
-    <p>Upload your Instacart grocery list (CSV) to preview items instantly.</p>
+    <h1>🥦 Smart Grocery Dashboard (Phase 3)</h1>
+    <p>Upload your Instacart grocery list (CSV) to see calories, macros, and charts instantly.</p>
 
     <form id="upload-form">
       <input type="file" id="csvFile" accept=".csv" required />
-      <button type="submit">Upload & Preview</button>
+      <button type="submit">Upload & Analyze</button>
     </form>
 
     <section id="output" style="margin-top:2rem;">
-      <h3>🛒 Grocery List</h3>
+      <h3>🛒 Grocery List + Nutrition</h3>
       <table id="table" role="grid"></table>
+
+      <footer id="totals"></footer>
+
+      <canvas id="macroChart"></canvas>
+      <canvas id="calorieChart"></canvas>
     </section>
   </main>
 
   <script>
+    const APP_ID = "YOUR_APP_ID"; // 8ebf3b28
+    const APP_KEY = "YOUR_APP_KEY"; // 0c50e9b7dc675df49229d2a50a92390d
     const form = document.getElementById("upload-form");
     const table = document.getElementById("table");
+    const totals = document.getElementById("totals");
 
-    form.addEventListener("submit", (e) => {
+    let totalCalories = 0, totalProtein = 0, totalCarbs = 0, totalFat = 0;
+    let calorieData = [], itemLabels = [];
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const file = document.getElementById("csvFile").files[0];
       if (!file) return alert("Please choose a CSV file first.");
@@ -35,18 +56,113 @@
       Papa.parse(file, {
         header: true,
         skipEmptyLines: true,
-        complete: (results) => renderTable(results.data),
+        complete: async function (results) {
+          const groceries = results.data;
+          await fetchNutritionData(groceries);
+        },
       });
     });
 
-    function renderTable(data) {
-      if (!data.length) return (table.innerHTML = "<tr><td>No data found.</td></tr>");
-      const headers = Object.keys(data[0]);
-      let html = "<thead><tr>" + headers.map(h => `<th>${h}</th>`).join("") + "</tr></thead><tbody>";
-      data.forEach(row => {
-        html += "<tr>" + headers.map(h => `<td>${row[h]}</td>`).join("") + "</tr>";
+    async function fetchNutritionData(items) {
+      table.innerHTML = "<tr><th>Item</th><th>Quantity</th><th>Calories</th><th>Protein (g)</th><th>Carbs (g)</th><th>Fat (g)</th></tr>";
+      totalCalories = totalProtein = totalCarbs = totalFat = 0;
+      calorieData = [];
+      itemLabels = [];
+
+      for (const item of items) {
+        const food = item.item;
+        const quantity = item.quantity || 1;
+
+        try {
+          const res = await fetch("https://trackapi.nutritionix.com/v2/natural/nutrients", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "x-app-id": APP_ID,
+              "x-app-key": APP_KEY,
+            },
+            body: JSON.stringify({ query: food }),
+          });
+
+          const data = await res.json();
+          const foodItem = data.foods[0];
+
+          if (!foodItem) throw new Error("Invalid food");
+
+          const cal = foodItem.nf_calories * quantity;
+          const pro = foodItem.nf_protein * quantity;
+          const carb = foodItem.nf_total_carbohydrate * quantity;
+          const fat = foodItem.nf_total_fat * quantity;
+
+          totalCalories += cal;
+          totalProtein += pro;
+          totalCarbs += carb;
+          totalFat += fat;
+
+          calorieData.push(cal);
+          itemLabels.push(food);
+
+          const row = `
+            <tr>
+              <td>${food}</td>
+              <td>${quantity}</td>
+              <td>${cal.toFixed(0)}</td>
+              <td>${pro.toFixed(1)}</td>
+              <td>${carb.toFixed(1)}</td>
+              <td>${fat.toFixed(1)}</td>
+            </tr>
+          `;
+          table.innerHTML += row;
+        } catch (err) {
+          console.error(err);
+          table.innerHTML += `<tr><td>${food}</td><td>${quantity}</td><td colspan="4">Error fetching data</td></tr>`;
+        }
+      }
+
+      totals.innerHTML = `
+        Total Calories: ${totalCalories.toFixed(0)} kcal | 
+        Protein: ${totalProtein.toFixed(1)} g | 
+        Carbs: ${totalCarbs.toFixed(1)} g | 
+        Fat: ${totalFat.toFixed(1)} g
+      `;
+
+      renderCharts();
+    }
+
+    function renderCharts() {
+      // Pie Chart for Macros
+      const macroCtx = document.getElementById("macroChart").getContext("2d");
+      new Chart(macroCtx, {
+        type: "pie",
+        data: {
+          labels: ["Protein", "Carbs", "Fat"],
+          datasets: [{
+            data: [totalProtein * 4, totalCarbs * 4, totalFat * 9],
+            backgroundColor: ["#36a2eb", "#ffcd56", "#ff6384"],
+          }],
+        },
+        options: {
+          plugins: { title: { display: true, text: "Macro Calorie Breakdown" } },
+        },
       });
-      table.innerHTML = html + "</tbody>";
+
+      // Bar Chart for Calories per Item
+      const calCtx = document.getElementById("calorieChart").getContext("2d");
+      new Chart(calCtx, {
+        type: "bar",
+        data: {
+          labels: itemLabels,
+          datasets: [{
+            label: "Calories per Item",
+            data: calorieData,
+            backgroundColor: "#4bc0c0",
+          }],
+        },
+        options: {
+          scales: { y: { beginAtZero: true } },
+          plugins: { title: { display: true, text: "Calories per Grocery Item" } },
+        },
+      });
     }
   </script>
 </body>
